--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - azure-cli/install
       - azure-cli/login-with-service-principal
       - run: az account set --subscription $AZURE_SUBSCRIPTION
-      - run: az acr build --registry $AZURE_ACR_REGISTRY --image socketio:$CIRCLE_BRANCH .
+      - run: az acr build --registry $AZURE_ACR_REGISTRY --image sidekiq-web:$CIRCLE_BRANCH .
 
 workflows:
     build-and-deploy:
